--- a/Kirchhoffs_Laws/Kirchhoffs_Laws.tex
+++ b/Kirchhoffs_Laws/Kirchhoffs_Laws.tex
@@ -153,7 +153,7 @@ Only KVL is needed to find the current in a single-loop circuit.
   \item Which value for $I$ found above is correct?
 
         \ifsolutions
-        \textbf{Answer}: Both are correct. A negative current is equivalent to a positive current in the opposite direction.
+        \textbf{Answer}: Both are correct and consistent. A negative current is equivalent to a positive current in the opposite direction. (You may recall from mechanics that when solving static equilibrium problems, you assume a direction for an unknown force $F$ on an object in a free-body diagram, sum all of the forces on it, and then solve for the unknown force. If the solution gives a negative $F$, you assumed the wrong direction for $F$.)
         \else
         \vskip 36pt
         \fi
@@ -166,7 +166,7 @@ Only KVL is needed to find the current in a single-loop circuit.
         \vskip 36pt
         \fi
 
-  \item For the first circuit considered above, if you remove the bottom resistor and replace the top resistor with a resistor with resistance $2R$, the following circuit results. What is the current $I$ for this circuit?
+  \item For the circuit in part 1., if you replace the bottom resistor with a wire and replace the top resistor with a resistor with resistance $2R$, the following circuit results. What is the current $I$ for this circuit?
 
         \input{figures/Single_Loop_Equiv.tikz}
 
@@ -214,7 +214,7 @@ Only KVL is needed to find the current in a single-loop circuit.
 
             $$\frac{I_2}{I_1} = \frac{R_1}{R_2} \quad \Rightarrow \quad I_2 < I_1$$ 
 
-            One can also use the water flow analogy. If $R_2$ resists flow more than $R_1$, there will be more flow through $R_1$.
+            One can also use the water flow analogy. If $R_2$ resists flow more than $R_1$, there will be less flow through $R_2$.
             \else
             \vskip 60pt
             \fi
@@ -320,7 +320,7 @@ In the circuit for the previous problem, there are three possible loops. The thi
 
 \section{Redundant Equations}
 
-When solving circuit problems with multiple loops, you will generally find that you can use KVL and KCL to write more equations than there are unknowns. If you attempt to solve a problem with $N$ unknowns by writing $N$ equations based on KVL and KCL but cannot solve for the unknowns, the reason is that two or more of the equations that you wrote were not independent. To demonstrate this, for the following circuit,
+When solving circuit problems with multiple loops, you will generally find that you can use KVL and KCL to write more equations than there are unknown currents. If you attempt to solve a problem with $N$ unknowns by writing $N$ equations based on KVL and KCL but cannot solve for the unknowns, the reason is that two or more of the equations that you wrote were not independent. To demonstrate this, for the following circuit,
 
 \input{figures/Multiple_Loops_III.tikz}
 
@@ -353,7 +353,7 @@ When solving circuit problems with multiple loops, you will generally find that 
   \item Is it possible to use the above three equations to solve for $I_1$, $I_2$, and $I_3$ in terms of $\mathcal{E}$ and $R$? If yes, do it. If no, explain why.
 
         \ifsolutions
-        \textbf{Answer}: No. The equation for junction $X$ can be turned into the equation for junction $Y$ by multiplying all terms in either equation by $-1$. Thus, the equations are not independent. Given that three independent equations are needed to solve for three unknowns, a solution is impossible with the equations requested in parts 1.--3.
+        \textbf{Answer}: No. The equation for junction $X$ can be turned into the equation for junction $Y$ by multiplying all terms in it by $-1$. Thus, the equations are not independent. Given that three independent equations are needed to solve for three unknowns, a solution is impossible with the equations requested in parts 1.--3.
         \fi
 
 \end{enumerate}
