--- a/Magnetic_Force/Magnetic_Force.tex
+++ b/Magnetic_Force/Magnetic_Force.tex
@@ -158,7 +158,7 @@ For case f. in the figure above,
 
 \begin{enumerate}
 
-  \item Assuming $|\bfvec{B}|=B_o$ and $|\bfvec{v}|=v_o$, express $\bfvec{v}$ and $\bfvec{B}$ in terms of their magnitudes and unit vectors. Then find the magnetic force using $\bfvec{F} = q\bfvec{v}\times\bfvec{B}$ and compute the magnitude of $\bfvec{F}$.
+  \item Assuming $|\bfvec{B}|=B_o$ and $|\bfvec{v}|=v_o$, express $\bfvec{v}$ and $\bfvec{B}$ in terms of their magnitudes and unit vectors. Then use these expressions to find the magnetic force using $\bfvec{F} = q\bfvec{v}\times\bfvec{B}$ and compute the magnitude of $\bfvec{F}$.
 
   \item Use $F = |q|vB\sin\phi$ to compute the magnitude of the force and use the right-hand rule to determine its direction.
 
