--- a/Magnetic_Flux/Magnetic_Flux.tex
+++ b/Magnetic_Flux/Magnetic_Flux.tex
@@ -118,7 +118,7 @@ In the following figure, a square loop of area $A$ that can be rotated about the
         \vskip 36pt
         \fi
 
-  \item Draw the loop, $\hat{\mathbf{n}}$, and $\bfvec{B}_{\text{ext}}$ as they would appear when viewed from large $z$ when $\phi=0^\circ$, $\phi=45^\circ$, $\phi=135^\circ$, and $\phi=180^\circ$.
+  \item Draw the loop, $\hat{\mathbf{n}}$, and $\bfvec{B}_{\text{ext}}$ as they would appear when viewed from above (on the positive $z$--axis) when $\phi=0^\circ$, $\phi=45^\circ$, $\phi=135^\circ$, and $\phi=180^\circ$.
 
         \ifsolutions
         \textbf{Answer}:
@@ -160,7 +160,7 @@ In the following figure, a square loop of area $A$ that can be rotated about the
 
 The time rate of change of magnetic flux through a closed loop is a quantity that will be used when Faraday's law is covered.
 
-Suppose the loop in the previous problem rotates at a constant rate.
+Suppose the loop in the previous problem rotates at a constant rate such that $\phi=\omega t$, where $\omega$ is a contant.
 
 \input{figures/Square_I.tikz}
 
@@ -192,10 +192,10 @@ Suppose the loop in the previous problem rotates at a constant rate.
         \vskip 60pt
         \fi
 
-  \item What is the formula for $d\Phi_B/dt$?
+  \item What is the formula for $d\Phi_B(t)/dt$ in terms of $B_o$, $A$, $t$, and $\omega$?
 
         \ifsolutions
-        $\Phi=B_oA\cos\phi$, so $d\Phi_B/dt = -B_oA\sin\phi$
+        $\Phi_B=B_oA\cos\phi$, so $d\Phi_B/dt = -B_oA\omega\sin\omega t$
         \else
 
         \fi
