--- a/Lenzs_Law/Lenzs_Law.tex
+++ b/Lenzs_Law/Lenzs_Law.tex
@@ -96,7 +96,7 @@ If the magnitude of the magnetic field is not changing and the angle between the
 $
 \Phi_B = \bfvec{B}\bfcdot \bfvec{A}
 $
-or, equivalently, $\Phi_B = BA\cos\phi$, where $\phi$ is the angle between the area vector and $\bfvec{B}$.
+or, equivalently, $\Phi_B = BA\cos\phi$, where $\phi$ is the angle between the area vector, $\bfvec{A}$, and $\bfvec{B}$.
 
 There are three ways in which $\Phi_B$ can change:
 
@@ -104,7 +104,7 @@ There are three ways in which $\Phi_B$ can change:
 
   \item The magnitude of $\bfvec{B}$ (that is, $B$) can change. To do this, a magnet can be moved closer or farther away from a loop, a loop can be moved closer or farther away from a magnet, or the current that is generating the magnetic field can be changed. See Example 29.1 in the textbook for an example of the creation of a changing magnetic field with an electromagnet.
 
-  \item The area $A$ can change. To do this, the loop cross--section can be expanded or contracted by heating or cooling a wire or, more commonly, using a device called a slidewire generator (see Examples 29.5 and 29.6 in the textbook).
+  \item The area $A$ can change. To do this, the loop cross--section can be expanded or contracted by heating or cooling a wire or, more commonly, using a device called a slidewire generator (see Example 29.5 in the textbook).
 
   \item The angle $\phi$ can change. To do this, a conducting loop can be rotated (see Example 29.3 in the textbook). Electric motors use changes in $\phi$ to convert mechanical energy to electrical energy.
 
@@ -124,15 +124,15 @@ As described in the textbook,
 
 Here, we'll use a longer but more descriptive definition.
 
-{\bf Lenz's Law alternative}: When the external magnetic flux through a conducting loop changes, a current appears (is induced) in the loop. This induced current creates an induced magnetic field. The direction of the induced current is such that the induced magnetic field it creates attempts to keep the magnetic flux unchanged.
+{\bf Lenz's Law alternative}: When the magnetic flux due to an external source of a magnetic field through a conducting loop changes, a current appears (is induced) in the loop. The induced current creates an induced magnetic field. The direction of the induced current is such that the induced magnetic field opposes the change in flux.
 
-In the examples given, we will first find the direction of the induced magnetic field. Then, we will ask what direction of the induced current is consistent with this induced magnetic field using the current loop right--hand rule.
+In the examples given, we will first find the direction of the induced magnetic field that needed to oppose a change in flux due to an external source of a magnetic field. Then, we will ask what direction of the induced current is consistent with this induced magnetic field using the current loop right--hand rule, which is described in the next section.
 
-Lenz's law follows from Faraday's law. In principle, Faraday's law, with careful attention paid to signs, can be used to determine the direction of induced current, in which case Lenz's law is not needed. In a similar way that using the right--hand rules to determine the general direction for force can be used to check your math on a cross--product, Lenz's Law provides a check on the direction of the induced current when using Faraday's law.
+(Lenz's law follows from Faraday's law. In principle, Faraday's law, with careful attention paid to signs, can be used to determine the direction of induced current, in which case Lenz's law is not needed. In a similar way that using the right--hand rules to determine the general direction for force can be used to check your math on a cross--product, Lenz's Law provides a check on the direction of the induced current when using Faraday's law.)
 
 \section{Current Loop Right--Hand Rule}
 
-Given a loop of current in a plane, one can determine the direction of the magnetic field near the center of loop using the current loop right--hand rule: wrap your fingers around the loop in the direction of the current -- your thumb points in the direction of the magnetic field.
+Given a loop of current in a plane, one can determine the direction of its magnetic field near the center using the current loop right--hand rule: wrap your fingers around the loop in the direction of the current -- your thumb points in the direction of the magnetic field.
 
 \input{figures/Figure-28.12_Young_Freedman_14th_Edition.png}
 
@@ -160,9 +160,9 @@ A spatially uniform external magnetic field points out of the page, and its magn
 
 To determine the direction of the induced magnetic field, we draw field lines through the area at $t=0$ and then a short time later. On the left--hand side of the following figure, field lines are shown pointing out of the page. A short time later, at $t=\Delta t$, $B_{\text{ext}}$ has increased, so we draw more field lines pointing out of the page.
 
-The induced magnetic field is in the direction that opposes the change in magnetic flux, so the induced field must be into the page. (Note that the induced magnetic flux will not exactly cancel the increase in flux; the magnitude of the induced magnetic flux will depend on how much current is induced, which depends on the resistance of the wires.)
+The induced magnetic field is in the direction that opposes the change in magnetic flux, so the induced field must be into the page. (The induced magnetic flux will not exactly cancel the increase in flux; the magnitude of the induced magnetic flux will depend on how much current is induced, which depends on the resistance of the wires.)
 
-Finally, we ask what direction of induced current in the loop creates this direction of $B_{\text{ind}}$. Using the current loop right--hand rule, it is a clockwise current.
+Finally, we ask what direction of induced current is consistent with a $B_{\text{ind}}$ directed into the page. Using the current loop right--hand rule, it is a clockwise current.
 
 \input{figures/Field_Out_Of_Page_B_Increasing.tikz}
 
@@ -376,7 +376,7 @@ An external magnetic field points into the page and it is not changing with time
 
 \subsection{}
 
-A conducting bar slides along a U-shaped conducting wire, as shown in a region of space where an external magnetic field is spatially uniform. (This is known as a ``slidewire generator").
+In a region of space where an external magnetic field is spatially uniform, a conducting bar slides along a U-shaped conducting wire (this is known as a ``slidewire generator").
 
 \input{figures/Slide_Wire.tikz}
 
